Add draft policy update endpoint (#758)
* Implement Policy model and initial Put policy service

* Update JavaDocs

* Implement PolicyHandler to create/update/search policies

* Remove PolicyHandler to reuse the ContentIndex methods directly

* Implement Unit Tests

* Implement space definition as mandatory in content indexing/update

* Add validation to Policy creation

* Update CHANGELOG

* Add documentation

* Improve validations

* Fix resource payload generation

* Rename space name field

* Improve management of space name

* Refactor Space name definition

* Revert minor change on UpdateServiceImpl

* Improve defined Space name validation

* Update OpenAPI definition to include policy endpoints

* Improve resource creation Unit Test

* Fix draft policy duplicated creation

* Add TODO

* Add date, modified and title fields

* Fix date fields

---------
